--- a/Tutor.WebClient/package.json
+++ b/Tutor.WebClient/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.64.2",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
