--- a/src/Tutor/Tutor.csproj
+++ b/src/Tutor/Tutor.csproj
@@ -9,11 +9,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
+      <ProjectReference Include="..\Tutor.Services\Tutor.Services.csproj" />
+      <ProjectReference Include="..\Tutor.Storage\Tutor.Storage.csproj" />
     </ItemGroup>
 
 </Project>
