--- a/src/Tutor.WebClient/package.json
+++ b/src/Tutor.WebClient/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
     "@tanstack/react-query": "^5.64.2",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.0.0",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
