--- a/src/Tutor.WebClient/package.json
+++ b/src/Tutor.WebClient/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "typescript": "~5.6.2",
