--- a/src/Tutor/appsettings.Development.json
+++ b/src/Tutor/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Tutor;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tutor;Username=postgres;Password=postgres"
   }
 }
