--- a/src/Chroniq.WebClient/.vscode/tasks.json
+++ b/src/Chroniq.WebClient/.vscode/tasks.json
@@ -7,6 +7,11 @@
       "label": "yarn dev",
       "type": "shell",
       "command": "yarn dev"
+    },
+    {
+      "label": "yarn build",
+      "type": "shell",
+      "command": "yarn build"
     }
   ]
 }
