--- a/src/Chroniq/appsettings.json
+++ b/src/Chroniq/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=tutor;Username=postgres;Password=postgres"
+  }
 }
