--- a/src/Chroniq/appsettings.json
+++ b/src/Chroniq/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=tutor;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=chroniq-postgres;Port=5432;Database=chroniq;Username=postgres;Password=postgres"
   }
 }
