--- a/src/docker-compose.production.yaml
+++ b/src/docker-compose.production.yaml
@@ -1,9 +1,11 @@
-﻿services:
+﻿name: production
+
+services:
   chroniq-postgres:
     restart: unless-stopped
     image: postgres
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
