--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ src/Chroniq/appsettings.json
 src/Chroniq/appsettings.json
 src/Chroniq/wwwroot
 src/Chroniq.sln.DotSettings.user
+src/Chroniq/work-calendar.json
