--- a/src/Chroniq/appsettings.example.json
+++ b/src/Chroniq/appsettings.example.json
@@ -12,5 +12,8 @@
     "Jwt": {
       "Secret": "secret"
     }
+  },
+  "WorkCalendarSettings": {
+    "Url": "https://xmlcalendar.ru/data/ru/2025/calendar.json"
   }
 }
