--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/Chroniq/appsettings.json
 src/Chroniq/wwwroot
 src/Chroniq.sln.DotSettings.user
 src/Chroniq/work-calendar.json
+src/Chroniq.Bot/appsettings.json
