--- a/src/Chroniq/appsettings.Development.json
+++ b/src/Chroniq/appsettings.Development.json
@@ -15,5 +15,6 @@
   },
   "WorkCalendarSettings": {
     "Url": "https://xmlcalendar.ru/data/ru/2025/calendar.json"
-  }
+  },
+  "TelegramBotPort": 5551
 }
