--- a/src/Chroniq/appsettings.Development.example.json
+++ b/src/Chroniq/appsettings.Development.example.json
@@ -16,5 +16,5 @@
   "WorkCalendarSettings": {
     "Url": "https://xmlcalendar.ru/data/ru/2025/calendar.json"
   },
-  "TelegramBotPort": 5551
+  "TelegramBotApiKey": "xxxxxxxxxxxxxxxxxxxxx"
 }
