--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ src/Chroniq/wwwroot
 src/Chroniq.sln.DotSettings.user
 src/Chroniq/work-calendar.json
 src/Chroniq.Bot/appsettings.json
+src/Chroniq/appsettings.Development.json
