--- a/src/Chroniq.Services/Chroniq.Services.csproj
+++ b/src/Chroniq.Services/Chroniq.Services.csproj
@@ -9,7 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Chroniq.Bot\Chroniq.Bot.csproj" />
       <ProjectReference Include="..\Chroniq.DTOs\Chroniq.DTOs.csproj" />
       <ProjectReference Include="..\Chroniq.Storage\Chroniq.Storage.csproj" />
     </ItemGroup>
@@ -23,6 +22,7 @@
     <ItemGroup>
       <PackageReference Include="Hangfire.Core" Version="1.8.17" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
+      <PackageReference Include="Telegram.Bot" Version="22.3.0" />
     </ItemGroup>
 
 </Project>
