--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/Chroniq.sln.DotSettings.user
 src/Chroniq/work-calendar.json
 src/Chroniq.Bot/appsettings.json
 src/Chroniq/appsettings.Development.json
+src/Chroniq/uploads
