--- a/src/docker-compose.production.yaml
+++ b/src/docker-compose.production.yaml
@@ -10,6 +10,7 @@ services:
       POSTGRES_DB: chroniq
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - uploads:/app/uploads
   chroniq:
     restart: unless-stopped
     image: chroniq
@@ -19,3 +20,4 @@ services:
       - chroniq-postgres
 volumes:
   pgdata:
+  uploads:
