--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/Chroniq/work-calendar.json
 src/Chroniq.Bot/appsettings.json
 src/Chroniq/appsettings.Development.json
 src/Chroniq/uploads
+src/Chroniq/logs
