--- a/src/Chroniq/appsettings.Development.example.json
+++ b/src/Chroniq/appsettings.Development.example.json
@@ -16,5 +16,8 @@
   "WorkCalendarSettings": {
     "Url": "https://xmlcalendar.ru/data/ru/2025/calendar.json"
   },
-  "TelegramBotApiKey": "xxxxxxxxxxxxxxxxxxxxx"
+  "TelegramBotApiKey": "xxxxxxxxxxxxxxxxxxxxx",
+  "FileStorage": {
+    "Path": "uploads"
+  }
 }
