--- a/src/docker-compose.production.yaml
+++ b/src/docker-compose.production.yaml
@@ -10,7 +10,6 @@ services:
       POSTGRES_DB: chroniq
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - uploads:/app/uploads
   chroniq:
     restart: unless-stopped
     image: chroniq
@@ -18,6 +17,9 @@ services:
       - "8080:8080"
     depends_on:
       - chroniq-postgres
+    volumes:
+      - uploads:/app/uploads
+      
 volumes:
   pgdata:
   uploads:
