--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on: [push]
 
 jobs:
-  log:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Log
@@ -19,3 +19,9 @@ jobs:
 
       - name: log node version
         run: node --version
+
+      - name: install deps
+        run: npm install
+
+      - name: lint
+        run: npm run lint
