--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: install deps
         run: npm install
+        working-directory: ./src/Chroniq.WebClient
 
       - name: lint
         run: npm run lint
