--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -1,12 +1,6 @@
 name: Run ReSharper CleanupCode
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
   cleanup:
