--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: ci
+name: ESLint
 
 on: [push]
 
@@ -28,6 +28,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions@github.com"
+          git pull
           git add .
           git commit -m "GitHub Actions: eslint fixes" || echo "No changes to commit"
           git push
