--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -23,7 +23,7 @@ jobs:
           unzip resharper.zip -d resharper
 
       - name: Make CleanupCode Executable
-        run: chmod +x resharper/cleanupcode.sh
+        run: chmod +x resharper/cleanupcode.exe
 
       - name: Run CleanupCode
         run: ./resharper/cleanupcode.exe ./src/Chroniq.sln
