--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -21,6 +21,8 @@ jobs:
         run: |
           cd ..
           pwd
+          cd ..
+          pwd
           wget -O resharper.zip "https://download.jetbrains.com/resharper/dotUltimate.2024.3.6/JetBrains.ReSharper.CommandLineTools.2024.3.6.zip"
           unzip resharper.zip -d resharper
 
