--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Download ReSharper CLI
         if: steps.cache-resharper.outputs.cache-hit != 'true'
         run: |
+          pwd
           cd ..
           pwd
           cd ..
