--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -24,7 +24,7 @@ jobs:
           unzip resharper.zip -d resharper
 
       - name: Make CleanupCode Executable
-        run: chmod +x resharper/cleanupcode.sh
+        run: chmod +x ../resharper/cleanupcode.sh
 
       - name: Run CleanupCode
         run: ../resharper/cleanupcode.sh ./src/Chroniq.sln
