--- a/.github/workflows/resharper.yml
+++ b/.github/workflows/resharper.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run CleanupCode
         run: ../resharper/cleanupcode.sh ./src/Chroniq.sln
 
-      - name: Commit lint fixes
+      - name: Commit resharper fixes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions@github.com"
