--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,11 +17,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build -t mEzdpg2kLJ9nAg/chroniq:latest .
+        run: docker build -t mezdpg2klj9nag/chroniq:latest .
         working-directory: ./src
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker image
-        run: docker push mEzdpg2kLJ9nAg/chroniq
+        run: docker push mezdpg2klj9nag/chroniq
