--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,3 +25,15 @@ jobs:
 
       - name: Push Docker image
         run: docker push mezdpg2klj9nag/chroniq
+
+      - name: Deploy to VM
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.VM_IP }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            docker pull mezdpg2klj9nag/chroniq:latest
+            docker stop chroniq || true
+            docker rm chroniq || true
+            docker run -d -p 80:80 --name chroniq mezdpg2klj9nag/chroniq:latest
