--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,15 @@ jobs:
       - name: Push Docker image
         run: docker push mezdpg2klj9nag/chroniq
 
+      - name: Copy docker-compose.yml to VM
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.VM_IP }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "./src/docker-compose.production.yaml"
+          target: "/var/www/docker-compose.yml"
+
       - name: Deploy to VM
         uses: appleboy/ssh-action@v1
         with:
@@ -34,6 +43,5 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker pull mezdpg2klj9nag/chroniq:latest
-            docker stop chroniq || true
-            docker rm chroniq || true
-            docker run -d -p 80:80 --name chroniq mezdpg2klj9nag/chroniq:latest
+            docker-compose -f /var/www/docker-compose.yml down || true
+            docker-compose -f /var/www/docker-compose.yml up -d
