--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "./src/docker-compose.production.yaml"
-          target: "/var/www/docker-compose.production.yaml"
+          target: "/var/www"
           strip_components: 1
 
       - name: Deploy to VM
