--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -53,5 +53,5 @@ jobs:
           script: |
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
             docker pull mezdpg2klj9nag/chroniq:latest
-            docker compose -f /var/www/docker-compose.production.yaml down || true
-            docker compose -f /var/www/docker-compose.production.yaml up -d
+            docker compose down || true
+            docker compose up -d
