--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,15 +35,6 @@ jobs:
           target: "/var/www"
           strip_components: 2
 
-      - name: Rename docker-compose.production.yaml to docker-compose.yaml
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.VM_IP }}
-          username: ${{ secrets.VM_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            mv /var/www/docker-compose.production.yaml /var/www/docker-compose.yaml
-
       - name: Deploy to VM
         uses: appleboy/ssh-action@v1
         with:
@@ -52,6 +43,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            cd /var/www/
+            mv docker-compose.production.yaml docker-compose.yaml
             docker pull mezdpg2klj9nag/chroniq:latest
             docker compose down || true
             docker compose up -d
