--- a/src/Chroniq.WebClient/tsconfig.app.json
+++ b/src/Chroniq.WebClient/tsconfig.app.json
@@ -23,11 +23,10 @@
     "noUncheckedSideEffectImports": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@app/*": ["./src/app/*"],
       "@features/*": ["./src/features/*"],
-      "@api/*": ["./src/api/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@types/*": ["./src/types/*"]
+      "@assets/*": ["./src/assets/*"]
     }
   },
   "include": ["src"]
